<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CAM.RE - Survey</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_move_right">Move to right side</string>
    <string name="action_move_left">Move to left side</string>
    <string name="action_open_map">Open map</string>
    <string name="action_restore_previous">Delete and restore the previous surface</string>
    <string name="action_delete_element">Are you sure you want to delete this Element?</string>
    <string name="action_delete_note">Are you sure you want to delete this Note?</string>
    <string name="del_also_media">Also delete multimedia notes</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="accuracy">Accuracy</string>
    <string name="altitude">Altitude</string>

    <string-array name="navigation_drawer_array">
        <item>Search</item>
        <item>Recent</item>
        <item>New path</item>
        <item>Settings</item>
        <item>Tests</item>
        <item>Logout</item>
    </string-array>

    <string name="title_activity_route_form">RouteForm</string>

    <string-array name="route_type">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string name="title_activity_walker">WalkerActivity</string>
    <string name="title_activity_element_form">Element Details</string>

    <string name="tab_survey">Survey</string>
    <string name="tab_path">Overview</string>
    <string name="tab_map">Map</string>

    <!-- PATH STRINGS  ******************************************************** -->
    <string name="path_name">Name</string>
    <string name="path_path">Path</string>
    <string name="path_edit_form">edit</string>
    <string name="path_new_form">New path</string>
    <string name="path_survey_form">Path survey</string>
    <string name="path_left">Active Left Side</string>
    <string name="path_right">Active Right Side</string>
    <string name="path_surface">Active Surface</string>
    <string name="path_add_left">Add Left Side</string>
    <string name="path_add_right">Add Right side</string>
    <string name="path_add_surface">Change Surface</string>

    <!-- PATH STATUS -->
    <string name="path_status">Status</string>
    <string name="path_status_prompts">Choose the Status</string>

    <string-array name="path_status">
        <item>http://www.camre.ch/path/status/approved;approved</item>
        <item>http://www.camre.ch/path/status/standby;standby</item>
        <item>http://www.camre.ch/path/status/banned;banned</item>
    </string-array>

    <!-- PATH CHARACTERISTICS -->
    <string name="path_characteristics_difficulty">Difficulty</string>
    <string name="path_characteristics_difficulty_prompt">Choose the Difficulty</string>

    <string-array name="path_characteristics_difficulty">
        <item>http://www.camre.ch/path/difficulty/T1;T1 - Escursionismo</item>
        <item>http://www.camre.ch/path/difficulty/T2;T2 - Escursione di montagna</item>
        <item>http://www.camre.ch/path/difficulty/T3;T3 - Escursione di montagna impegnativa</item>
        <item>http://www.camre.ch/path/difficulty/T4;T4 - Itinerario alpino</item>
        <item>http://www.camre.ch/path/difficulty/T5;T5 - Itinerario alpino impegnativo</item>
        <item>http://www.camre.ch/path/difficulty/T6;T6 - Itinerario alpino difficile</item>
    </string-array>

    <!-- PATH PROTECTION -->
    <string name="path_characteristics_protection">Protection</string>
    <string name="path_characteristics_protection_prompt">Choose the Protection</string>

    <string-array name="path_characteristics_protection">
        <item>http://www.camre.ch/path/protection/sidewalk;Sidewalk</item>
        <item>http://www.camre.ch/path/protection/parapet_railing;Parapet-Railing</item>
    </string-array>

    <!-- PATH RISK -->
    <string name="path_characteristics_risk">Risk</string>
    <string name="path_characteristics_risk_prompt">Choose the Risk</string>

    <string-array name="path_characteristics_risk">
        <item>http://www.camre.ch/path/risk/none;None</item>
        <item>http://www.camre.ch/path/risk/mud;Mud</item>
        <item>http://www.camre.ch/path/risk/flood;Flood</item>
        <item>http://www.camre.ch/path/risk/erosive_groove;Erosive groove</item>
        <item>http://www.camre.ch/path/risk/traffic;Traffic</item>
        <item>http://www.camre.ch/path/risk/footprint;Footprint</item>
        <item>http://www.camre.ch/path/risk/rocks_and_stones;Rocks and stones</item>
    </string-array>

    <!-- PATH HAZARD -->
    <string name="path_characteristics_hazard">Hazard</string>
    <string name="path_characteristics_hazard_prompt">Choose the Hazard</string>

    <string-array name="path_characteristics_hazard">
        <item>http://www.camre.ch/path/risk/none_various_indefiable;NULL/Various/Indefinable</item>
        <item>http://www.camre.ch/path/risk/residual;Residual</item>
        <item>http://www.camre.ch/path/risk/low;Low</item>
        <item>http://www.camre.ch/path/risk/mid;Mid</item>
        <item>http://www.camre.ch/path/risk/height;Height</item>
    </string-array>

    <!-- PATH CIRCULAR SWITCH -->
    <string name="path_characteristics_circular">Circular</string>

    <!-- PATH ACTIVITY -->
    <string name="path_characteristics_activity">Activity</string>
    <string name="path_characteristics_activity_prompt">Choose the Activity</string>

    <string-array name="path_characteristics_activity">
        <item>http://www.camre.ch/activity/hicking;hicking</item>
        <item>http://www.camre.ch/activity/mountain_biking;Mountain biking</item>
        <item>http://www.camre.ch/activity/walking;walking</item>
        <item>http://www.camre.ch/activity/running;running</item>
        <item>http://www.camre.ch/activity/snowshoeing;snowshoeing</item>
        <item>http://www.camre.ch/activity/cycling;cycling</item>
        <item>http://www.camre.ch/activity/horseback_riding;horseback riding</item>
    </string-array>

    <!-- ELEMENTS STRINGS  ******************************************************** -->


    <!-- ELEMENT STATUS -->
    <string name="element_status">Status</string>
    <string name="element_status_prompts">Choose the Status</string>

    <string-array name="element_status">
        <item>http://www.camre.ch/note/status/good;Good</item>
        <item>http://www.camre.ch/note/status/damaged;Damaged</item>
        <item>http://www.camre.ch/note/status/seriously_damaged;Seriously damaged</item>
        <item>http://www.camre.ch/note/status/distrupted;Distrupted</item>
    </string-array>

    <!-- ELEMENT TYPE -->
    <string name="element_type">Type</string>
    <string name="element_type_prompts">Choose the type</string>

    <!-- ELEMENTS TYPE (SIDE) -->
    <string-array name="elements_side_type">
        <item>http://www.camre.ch/properties/scarp/terrain/down;Slope downhill;Descrizione Foo Bar</item>
        <item>http://www.camre.ch/properties/scarp/terrain/up;Uphill slope;Descrizione Foo Bar</item>
        <item>http://www.camre.ch/properties/wall/stone;Stone wall;Descrizione Foo Bar</item>
        <item>http://www.camre.ch/properties/wall/cement;Concrete wall;Descrizione Foo Bar</item>
        <item>http://www.camre.ch/properties/fence/wood;Wooden fence;Descrizione Foo Bar</item>
        <item>http://www.camre.ch/properties/woods;Woods;Descrizione Foo Bar</item>
    </string-array>

    <!-- ELEMENTS TYPE (SURFACE) -->
    <string-array name="elements_surface_type">
        <item>http://www.camre.ch/properties/surface/pavement;Floor;Descrizione Foo Bar</item>
        <item>http://www.camre.ch/properties/surface/gravel;Gravel;Descrizione Foo Bar</item>
        <item>http://www.camre.ch/properties/surface/asphalt;Asphalt;Descrizione Foo Bar</item>
        <item>http://www.camre.ch/properties/surface/wood;Wood;Descrizione Foo Bar</item>
        <item>http://www.camre.ch/properties/surface/shingle;Shingle;Descrizione Foo Bar</item>
    </string-array>

    <!-- ELEMENTS TYPE (BRIDGE) -->
    <string-array name="elements_bridge_type">
        <item>http://www.camre.ch/properties/bridge;Bridge;Descrizione Foo Bar</item>
    </string-array>

    <!-- ELEMENT SIZE -->
    <string name="element_width">Width</string>
    <string name="element_height">Height</string>

    <!-- NOTES STRINGS  ******************************************************** -->

    <!-- NOTE STATUS -->
    <string name="note_description">Description</string>
    <string name="title_activity_walker_activity_test">WalkerActivityTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="path_viewer_time_scale">Time</string>
    <string name="path_viewer_distance_scale">Distance</string>
    <string name="action_login_skip">Skip</string>
    <string name="welcome">Welcome</string>
    <string name="access_denied">The email or password you entered is incorrect</string>
    <string name="tab_info">Info</string>
    <string name="path_bridge">Bridge</string>
    <string name="surface_end_point_message">To add the End Point in a surface you have to select the next surface</string>
    <string name="title_activity_settings">Settings</string>

    <string name="GPS_ONLY">Use GPS only</string>
    <string name="PATH_ACCURACY">Acceptable accuracy</string>
    <string name="PATH_POINTS_DISTANCE">Points distance</string>
    <string name="action_close_path">Are you sure you want to close the path? You won\'t be able to reopen it.</string>
    <string name="path_lenght">Length</string>
    <string name="path_notes">Notes</string>
    <string name="element">Element</string>
    <string name="action_prev">Previews</string>
    <string name="action_next">Next</string>

</resources>